2011-02-23  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #17719: Move donation popup to about module (thanks to Steffen Kamper)
	* Follow-up to bug #17719: Removed unused files

2011-02-23  Steffen Kamper  <steffen@typo3.org>

	* Merge of extension manager for 4.5.0 - see ChangeLog in em for details
	* Fixed bug #17520: Pagetree - Locked records are not indicated anymore (Thanks to Stefan Galinski)
	* Fixed bug #17702: Directly open "inline edit" of page title after creating a new page with drag and drop in the pagetree (Thanks to Stefan Galinski)

2011-02-23  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17314: Swift_RfcComplianceException is always thrown in t3lib_formmail when forceReturnPath=1 is set

2011-02-23  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #17511: tx_install_session::write doesn't fix permissions

2011-02-23  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16636: Suggest wizard does not work with drop-down select fields

2011-02-22  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #16656: ImageMagick does not work with quotes in exec() path on Windows

2011-02-22  Stefan Galinski  <stefan.galinski@gmail.com>

	* Fixed bug #17483: GifBuilder - meaningfulTempFilePrefix can cause invalid image urls
	* Fixed bug #17531: htmlMail - Can't send mails on port based systems with Swiftmailer substitution
	* Fixed bug #17452: options.hideRecords.pages is ignored in page tree (Thanks to Andreas Kiessling)
	* Fixed bug #17457: Pagetree - User Mount Points are always expanded
	* Fixed bug #17479: javascript error after contextmenu -> delete a page

2011-02-22  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17670: Remove deprecated functions scheduled for removal in 4.6
	* Fixed bug #17662: Remove deprecated class gzip_encode
	* Fixed bug #17661: Remove deprecated methods from t3lib_div

2011-02-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17695: htmlArea RTE: Removing format may remove content
