@@ -5,6 +5,7 @@
 
 2011-02-23  Steffen Kamper  <steffen@typo3.org>
 
+	* Update codemirror to recent version 0.9.4
 	* Merge of extension manager for 4.5.0 - see ChangeLog in em for details
 	* Fixed bug #17520: Pagetree - Locked records are not indicated anymore (Thanks to Stefan Galinski)
 	* Fixed bug #17702: Directly open "inline edit" of page title after creating a new page with drag and drop in the pagetree (Thanks to Stefan Galinski)
